@@ -1,5 +1,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.525 2006/01/24 19:30:47 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.526 2006/01/25 16:07:35 rocket Exp $
+
+  25 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
+  Fix bug if no kernel packages were defined but there was a postconf setting.
+  x86 softlevel support is enhanced.
 
   24 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/support/bootloader-setup.sh:
